Domain classes and constraint tests

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,8 @@
 #Grails Metadata file
-#Sun Aug 05 10:54:57 EDT 2012
+#Sat Sep 15 15:40:08 EDT 2012
 app.grails.version=2.1.0
 app.name=charity-champ
 app.version=0.1
 plugins.cloud-bees=0.5.4
+plugins.spock=0.6
+plugins.spock-grails-env-extensions=0.1
