--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Mon Sep 17 19:32:14 EDT 2012
+#Mon Sep 17 21:15:43 EDT 2012
 app.grails.version=2.1.0
 app.name=charity-champ
 app.version=0.1
 plugins.cloud-bees=0.5.4
+plugins.joda-time=1.4
 plugins.spock=0.6
